[gd_scene load_steps=34 format=2]

[ext_resource path="res://addons/MapEditorDock/SignalSender.gd" type="Script" id=1]
[ext_resource path="res://Maps/assets/concrete.png" type="Texture" id=2]
[ext_resource path="res://Maps/assets/metal.png" type="Texture" id=3]
[ext_resource path="res://Maps/assets/bricks.png" type="Texture" id=4]
[ext_resource path="res://Maps/assets/stone.png" type="Texture" id=5]
[ext_resource path="res://addons/MapEditorDock/DockButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Maps/assets/roof1.png" type="Texture" id=7]
[ext_resource path="res://Maps/assets/roof3.png" type="Texture" id=8]
[ext_resource path="res://Maps/assets/roof2.png" type="Texture" id=9]
[ext_resource path="res://Maps/assets/roof4.png" type="Texture" id=10]
[ext_resource path="res://Maps/assets/roof5.png" type="Texture" id=11]
[ext_resource path="res://Maps/assets/roof6.png" type="Texture" id=12]
[ext_resource path="res://Maps/assets/road1.png" type="Texture" id=13]
[ext_resource path="res://Maps/assets/sidewalk.png" type="Texture" id=14]
[ext_resource path="res://Maps/assets/road2.png" type="Texture" id=15]
[ext_resource path="res://Maps/assets/tree.png" type="Texture" id=16]
[ext_resource path="res://Maps/assets/rock.png" type="Texture" id=17]
[ext_resource path="res://Maps/assets/cafeteria_roof.png" type="Texture" id=18]
[ext_resource path="res://Maps/assets/metal_fence.png" type="Texture" id=19]
[ext_resource path="res://Maps/assets/cinema_roof.png" type="Texture" id=20]
[ext_resource path="res://Maps/assets/cpn_roof.png" type="Texture" id=21]
[ext_resource path="res://Maps/assets/chimney.png" type="Texture" id=22]
[ext_resource path="res://Maps/assets/gatehouse.png" type="Texture" id=23]
[ext_resource path="res://Maps/assets/fuel_dispatcher.png" type="Texture" id=24]
[ext_resource path="res://Maps/assets/lamp.png" type="Texture" id=25]
[ext_resource path="res://Maps/assets/monument.png" type="Texture" id=26]
[ext_resource path="res://Maps/assets/playingField.png" type="Texture" id=27]
[ext_resource path="res://Maps/assets/red_car.png" type="Texture" id=28]
[ext_resource path="res://Maps/assets/yellow_car.png" type="Texture" id=29]
[ext_resource path="res://Maps/assets/truck.png" type="Texture" id=30]
[ext_resource path="res://Maps/assets/gray_car.png" type="Texture" id=31]
[ext_resource path="res://Maps/assets/block.png" type="Texture" id=32]
[ext_resource path="res://Maps/assets/bend.png" type="Texture" id=33]

[node name="MapEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1908.0
margin_bottom = 1724.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WoodWallBtn" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 1908.0

[node name="ConcreteWallBtn" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 54.0
margin_right = 1908.0
margin_bottom = 104.0
texture_normal = ExtResource( 2 )
title = "Concrete Wall"

[node name="StoneWallBtn" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 108.0
margin_right = 1908.0
margin_bottom = 158.0
texture_normal = ExtResource( 5 )
title = "StoneWall"

[node name="BricksWallBtn" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 162.0
margin_right = 1908.0
margin_bottom = 212.0
texture_normal = ExtResource( 4 )
title = "BricksWall"

[node name="MetalWallBtn" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 216.0
margin_right = 1908.0
margin_bottom = 266.0
texture_normal = ExtResource( 3 )
title = "MetalWall"

[node name="MetalFence" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 270.0
margin_right = 1908.0
margin_bottom = 320.0
texture_normal = ExtResource( 19 )
stretch_mode = 3
title = "Metal Fence"

[node name="Roof1" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 324.0
margin_right = 1908.0
margin_bottom = 374.0
texture_normal = ExtResource( 7 )
stretch_mode = 5
title = "Small Roof 1"

[node name="Roof2" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 378.0
margin_right = 1908.0
margin_bottom = 428.0
texture_normal = ExtResource( 9 )
stretch_mode = 5
title = "Big Roof 1"

[node name="Roof3" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 432.0
margin_right = 1908.0
margin_bottom = 482.0
texture_normal = ExtResource( 8 )
stretch_mode = 5
title = "Small Roof 2"

[node name="Roof4" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 486.0
margin_right = 1908.0
margin_bottom = 536.0
texture_normal = ExtResource( 10 )
stretch_mode = 5
title = "Big Roof 2"

[node name="Roof5" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 540.0
margin_right = 1908.0
margin_bottom = 590.0
texture_normal = ExtResource( 11 )
stretch_mode = 5
title = "Small Roof 3"

[node name="Roof6" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 594.0
margin_right = 1908.0
margin_bottom = 644.0
texture_normal = ExtResource( 12 )
stretch_mode = 5
title = "Big Roof 3"

[node name="CafeteriaRoof" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 648.0
margin_right = 1908.0
margin_bottom = 698.0
texture_normal = ExtResource( 18 )
stretch_mode = 5
title = "Cafeteria Roof"

[node name="CpnRoof" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 702.0
margin_right = 1908.0
margin_bottom = 752.0
texture_normal = ExtResource( 21 )
stretch_mode = 5
title = "CPN Roof"

[node name="CinemaRoof" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 756.0
margin_right = 1908.0
margin_bottom = 806.0
texture_normal = ExtResource( 20 )
stretch_mode = 5
title = "Cinema Roof"

[node name="BlockRoof" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 810.0
margin_right = 1908.0
margin_bottom = 860.0
texture_normal = ExtResource( 32 )
stretch_mode = 5
title = "Block Roof"

[node name="Road1" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 864.0
margin_right = 1908.0
margin_bottom = 914.0
texture_normal = ExtResource( 13 )
stretch_mode = 5
title = "Road 1"

[node name="Road2" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 918.0
margin_right = 1908.0
margin_bottom = 968.0
texture_normal = ExtResource( 15 )
stretch_mode = 5
title = "Road 2"

[node name="Road2bend" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 972.0
margin_right = 1908.0
margin_bottom = 1022.0
texture_normal = ExtResource( 33 )
stretch_mode = 5
title = "Road2 Bend"

[node name="Sidewalk" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1026.0
margin_right = 1908.0
margin_bottom = 1076.0
texture_normal = ExtResource( 14 )
stretch_mode = 5
title = "Sidewalk"

[node name="Rock" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1080.0
margin_right = 1908.0
margin_bottom = 1130.0
texture_normal = ExtResource( 17 )
stretch_mode = 5
title = "Rock"

[node name="Tree" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1134.0
margin_right = 1908.0
margin_bottom = 1184.0
texture_normal = ExtResource( 16 )
stretch_mode = 5
title = "Tree"

[node name="Chimney" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1188.0
margin_right = 1908.0
margin_bottom = 1238.0
texture_normal = ExtResource( 22 )
stretch_mode = 5
title = "Chimney"

[node name="FuelDispatcher" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1242.0
margin_right = 1908.0
margin_bottom = 1292.0
texture_normal = ExtResource( 24 )
stretch_mode = 5
title = "FuelDispatcher"

[node name="Gatehouse" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1296.0
margin_right = 1908.0
margin_bottom = 1346.0
texture_normal = ExtResource( 23 )
stretch_mode = 5
title = "Gatehouse"

[node name="Lamp" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1350.0
margin_right = 1908.0
margin_bottom = 1400.0
texture_normal = ExtResource( 25 )
stretch_mode = 5
title = "Lamp"

[node name="Monument" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1404.0
margin_right = 1908.0
margin_bottom = 1454.0
texture_normal = ExtResource( 26 )
stretch_mode = 5
title = "Monument"

[node name="PlayingField" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1458.0
margin_right = 1908.0
margin_bottom = 1508.0
texture_normal = ExtResource( 27 )
stretch_mode = 5
title = "Playing Field"

[node name="RedCar" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1512.0
margin_right = 1908.0
margin_bottom = 1562.0
texture_normal = ExtResource( 28 )
stretch_mode = 5
title = "Red Car"

[node name="YellowCar" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1566.0
margin_right = 1908.0
margin_bottom = 1616.0
texture_normal = ExtResource( 29 )
stretch_mode = 5
title = "Yellow Car"

[node name="GrayCar" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1620.0
margin_right = 1908.0
margin_bottom = 1670.0
texture_normal = ExtResource( 31 )
stretch_mode = 5
title = "Gray Car"

[node name="Truck" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1674.0
margin_right = 1908.0
margin_bottom = 1724.0
texture_normal = ExtResource( 30 )
stretch_mode = 5
title = "Truck"
[connection signal="pressed" from="ScrollContainer/VBoxContainer/WoodWallBtn" to="." method="_on_WoodWallBtn_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ConcreteWallBtn" to="." method="_on_ConcreteWallBtn_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/StoneWallBtn" to="." method="_on_StoneWallBtn_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BricksWallBtn" to="." method="_on_BricksWallBtn_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MetalWallBtn" to="." method="_on_MetalWallBtn_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MetalFence" to="." method="_on_MetalFence_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Roof1" to="." method="_on_Roof1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Roof2" to="." method="_on_Roof2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Roof3" to="." method="_on_Roof3_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Roof4" to="." method="_on_Roof4_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Roof5" to="." method="_on_Roof5_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Roof6" to="." method="_on_Roof6_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/CafeteriaRoof" to="." method="_on_CafeteriaRoof_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/CpnRoof" to="." method="_on_CpnRoof_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/CinemaRoof" to="." method="_on_CinemaRoof_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/BlockRoof" to="." method="_on_BlockRoof_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Road1" to="." method="_on_Road1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Road2" to="." method="_on_Road2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Road2bend" to="." method="_on_Road2bend_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Sidewalk" to="." method="_on_Sidewalk_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Rock" to="." method="_on_Rock_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Tree" to="." method="_on_Tree_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Chimney" to="." method="_on_Chimney_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/FuelDispatcher" to="." method="_on_FuelDispatcher_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Gatehouse" to="." method="_on_Gatehouse_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Lamp" to="." method="_on_Lamp_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Monument" to="." method="_on_Monument_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/PlayingField" to="." method="_on_PlayingField_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/RedCar" to="." method="_on_RedCar_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/YellowCar" to="." method="_on_YellowCar_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GrayCar" to="." method="_on_GrayCar_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Truck" to="." method="_on_Truck_pressed"]
